# pythemes

./: .pre-commit-config.yaml  README.md  pyproject.toml
pythemes/: __main__.py
tests/: test_apps.py  test_system.py
